--- a/home.html
+++ b/home.html
@@ -13,6 +13,7 @@
         <ul class="nav-links">
           <li><a href="home.html" class="nav-item active">Home</a></li>
           <li><a href="/pages/addTask/addTask.html" class="nav-item">Add Task</a></li>
+          <li><a href="" class="nav-item" id="inst">Instagram</a></li>
         </ul>
       </nav>
     </aside>
