Created Kanban Page

--- a/home.html
+++ b/home.html
@@ -14,6 +14,8 @@
           <li><a href="home.html" class="nav-item active">Home</a></li>
           <li><a href="/pages/addTask/addTask.html" class="nav-item">Add Task</a></li>
           <li><a href="" class="nav-item" id="inst">Instagram</a></li>
+          <li><a href="/pages/Kanban/Kanban.html" class="nav-item">Kanban</a></li>
+
         </ul>
       </nav>
     </aside>
