--- a/pages/addTask/addTask.html
+++ b/pages/addTask/addTask.html
@@ -1,41 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/pages/addTask/addTask.css" />
-    <title>Add Task</title>
-  </head>
-  <body>
-    <main>
-      <h1>Create New Task</h1>
-      <div>
-        <p>Title</p>
-        <input type="text" id="title"/>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/pages/addTask/addTask.css" />
+  <title>Add Task</title>
+</head>
+<body>
+  <main class="add-task-container">
+    <h1 class="page-title">Create New Task</h1>
+
+    <div class="form-group">
+      <label for="title">Title</label>
+      <input type="text" id="title" placeholder="Enter task title" />
+    </div>
+
+    <div class="form-group">
+      <label for="description">Description</label>
+      <textarea id="description" rows="4" placeholder="Describe your task..."></textarea>
+    </div>
+
+    <div class="form-row">
+      <div class="form-group half">
+        <label for="deadline">Deadline</label>
+        <input type="date" id="deadline" />
       </div>
-      <div>
-        <p>Description</p>
-        <textarea rows="4" cols="50" id="description"></textarea>
+
+      <div class="form-group half">
+        <label for="priority">Priority</label>
+        <select id="priority">
+          <option>Low</option>
+          <option>Medium</option>
+          <option>High</option>
+        </select>
       </div>
-      <div>
-        <div>
-          <p>Deadline</p>
-          <input type="date" id="deadline"/>
-        </div>
-        <div>
-          <p>Priority</p>
-          <select id="priority">
-            <option>Low</option>
-            <option>Medium</option>
-            <option>High</option>
-          </select>
-        </div>
-      </div>
-      <div>
-        <button>Cancel</button>
-        <button id="createTask">Create Task</button>
-      </div>
-    </main>
-  </body>
+    </div>
+
+    <div class="buttons">
+      <button class="btn cancel" id="cancel">Cancel</button>
+      <button class="btn create" id="createTask">Create Task</button>
+    </div>
+  </main>
+
   <script src="/pages/addTask/addTask.js"></script>
+</body>
 </html>
