--- a/pages/addTask/addTask.html
+++ b/pages/addTask/addTask.html
@@ -8,6 +8,11 @@
 </head>
 <body>
   <main class="add-task-container">
+    <button class="ai-btn">
+      <img src="/assets/image.png" alt="AI" />
+      AI
+    </button>
+
     <h1 class="page-title">Create New Task</h1>
 
     <div class="form-group">
@@ -41,6 +46,21 @@
       <button class="btn create" id="createTask">Create Task</button>
     </div>
   </main>
+
+  <!-- === AI Chat Modal === -->
+  <div id="aiModal" class="ai-modal">
+    <div class="ai-modal-content">
+      <span class="close-ai">&times;</span>
+      <h2>AI Assistant</h2>
+      <div class="chat-box" id="chatBox">
+        <p class="ai-msg">👋 Hi! Describe your task, e.g. "Создай задачу на понедельник, доделать серверную работу"</p>
+      </div>
+      <div class="chat-input">
+        <input type="text" id="aiInput" placeholder="Type your message..." />
+        <button id="sendAI">Send</button>
+      </div>
+    </div>
+  </div>
 
   <script src="/pages/addTask/addTask.js"></script>
 </body>
